--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "clinica-app",
   "version": "0.1.0",
   "private": true,
+  "description": "Aplicación de gestión clínica",
+  "author": "Usuario",
   "main": "electron-main.cjs",
   "scripts": {
     "dev": "concurrently -k \"npm run frontend\" \"npm run electron\"",
