--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "jspdf-autotable": "^3.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wait-on": "^7.2.0"
+    "wait-on": "^7.2.0",
+    "mysql2": "^3.9.1",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "typeface-roboto": "^1.1.13"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
@@ -37,11 +42,14 @@
     },
     "files": [
       "**/*",
+      "backend/**/*",
       "!backend/node_modules/**/*"
     ],
     "win": {
-      "target": "nsis",
-      "icon": "build/icon.ico"
+      "target": "dir",
+      "icon": "build/icon.ico",
+      "verifyUpdateCodeSignature": false,
+      "sign": null
     }
   }
 }
